--- a/package.json
+++ b/package.json
@@ -13,12 +13,7 @@
   "author": "Karim Ahmadi",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^4.1.0",
-    "clear": "^0.1.0",
-    "clui": "^0.3.6",
-    "figlet": "^1.4.0",
-    "inquirer": "^7.1.0",
-    "minimist": "^1.2.5",
+    "cfonts": "^2.8.5",
     "path": "^0.12.7",
     "plop": "^2.7.1"
   },
