--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ReactSeam/component-generator",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "Component Generator",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "cfonts": "^2.8.5",
+    "migrate": "^1.7.0",
     "path": "^0.12.7",
     "plop": "^2.7.1"
   },
