--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ReactSeam/component-generator",
+  "name": "@tatareact/component-generator",
   "version": "0.2.0",
   "description": "Component Generator",
   "main": "index.js",
@@ -19,6 +19,28 @@
     "plop": "^2.7.1"
   },
   "publishConfig": {
-    "registry": "http://192.168.100.192:4873"
+    "registry": "http://lib2.tiddev.com/artifactory/api/npm/npm-local/"
+  },
+  "devDependencies": {
+    "babel-eslint": "10.0.1",
+    "eslint": "5.16.0",
+    "eslint-config-prettier": "4.1.0",
+    "eslint-plugin-prettier": "3.0.1",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
+    "prettier": "1.17.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --cache --fix"
+    ],
+    "*.json": [
+      "prettier --write"
+    ]
   }
 }
