--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "plop": "plop"
   },
   "bin": {
-    "cc": "bin/cc.js"
+    "CG": "bin/component-generator.js"
   },
   "author": "Karim Ahmadi",
   "license": "ISC",
   "dependencies": {
     "cfonts": "^2.8.5",
     "migrate": "^1.7.0",
+    "minimist": "^1.2.5",
     "path": "^0.12.7",
     "plop": "^2.7.1"
   },
@@ -24,7 +25,9 @@
   "devDependencies": {
     "babel-eslint": "10.0.1",
     "eslint": "5.16.0",
+    "eslint-config-airbnb-base": "13.1.0",
     "eslint-config-prettier": "4.1.0",
+    "eslint-plugin-import": "2.17.2",
     "eslint-plugin-prettier": "3.0.1",
     "husky": "^4.3.0",
     "lint-staged": "^10.4.0",
@@ -37,7 +40,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "eslint --cache --fix",
+      "eslint --cache --ignore-path .gitignore --fix",
       "git add --force"
     ],
     "*.json": [
