--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "plop": "plop"
+    "plop": "plop",
+    "eslint": "eslint -- ."
   },
   "bin": {
     "CG": "bin/component-generator.js"
@@ -14,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "cfonts": "^2.8.5",
+    "inquirer": "^7.3.3",
     "migrate": "^1.7.0",
     "minimist": "^1.2.5",
     "path": "^0.12.7",
