--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "prebuild": "npm run build:clean",
+    "build": "webpack --config src/webpack.config.js --color -p --progress --hide-modules --display-optimization-bailout",
+    "build:clean": "rimraf ./bin",
     "plop": "plop",
     "eslint": "eslint -- ."
   },
@@ -14,9 +17,7 @@
   "author": "Karim Ahmadi",
   "license": "ISC",
   "dependencies": {
-    "cfonts": "^2.8.5",
     "inquirer": "^7.3.3",
-    "migrate": "^1.7.0",
     "minimist": "^1.2.5",
     "path": "^0.12.7",
     "plop": "^2.7.1"
@@ -25,7 +26,10 @@
     "registry": "http://lib2.tiddev.com/artifactory/api/npm/npm-local/"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
     "babel-eslint": "10.0.1",
+    "babel-loader": "^8.1.0",
+    "copy-webpack-plugin": "^6.2.0",
     "eslint": "5.16.0",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-config-prettier": "4.1.0",
@@ -33,7 +37,10 @@
     "eslint-plugin-prettier": "3.0.1",
     "husky": "^4.3.0",
     "lint-staged": "^10.4.0",
-    "prettier": "1.17.0"
+    "prettier": "1.17.0",
+    "shebang-loader": "0.0.1",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "husky": {
     "hooks": {
